--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ img {
 }
 
 .container {
+  margin: 20px auto;
+  padding: 20px;
+  max-width: 1200px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -24,9 +27,11 @@ img {
     "one three five"
     "one four five"
     "two four six";
-  margin-top: 20px;
+  margin-top: auto;
+  object-fit: cover;
 }
 
+/* Grid item placements */
 .one {
   grid-area: one;
 }
@@ -49,4 +54,31 @@ img {
 
 .six {
   grid-area: six;
+}
+
+/* Responsive adjustments */
+@media (max-width: 1024px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "one three"
+      "one four"
+      "two five"
+      "six five";
+    object-fit: cover;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "one"
+      "three"
+      "four"
+      "five"
+      "two"
+      "six";
+    object-fit: cover;
+  }
 }
